--- a/test1.html
+++ b/test1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>test website</title>
+    <link href="styles/style.css" rel="stylesheet">
 </head>
 <body>
 <h1>test title</h1>
@@ -21,5 +22,6 @@ content3
 <p>a<sub>1</sub><sup>2</sup>=7</p>
 <del>We should use html and javascript instead of elm!</del>
 <p>t</p>
+
 </body>
 </html>
