add html features

--- a/test1.html
+++ b/test1.html
@@ -6,22 +6,30 @@
     <link href="styles/style.css" rel="stylesheet">
 </head>
 <body>
-<h1>test title</h1>
+<h1 id="title_1">test title</h1>
 <p>test url and picture:</p>  <!--This is a comment-->
 <a href="https://www.bing.com">必应官网</a> <!--url link-->
 <br>
-<img src="asset/test.jpg" alt="test.jpg" width="300" height="210"><br>
+<img id="fig1" src="asset/test.jpg" alt="test.jpg" title="click it" width="300" height="210"><br>
 content1
 <br>
 content2
 <hr>
 content3
 <p>This is a sentence with <b>bold</b> and <i>italic</i> elements. </p>
+<ul>
+    <li>test1</li>
+    <li>test2</li>
+    <li>test3</li>
+</ul>
 <p>This is a sentence with <strong>bold</strong> and <em>italic</em> elements.
     However, we use &lt;strong&gt;and&lt;em&gt;instead </p>
 <p>a<sub>1</sub><sup>2</sup>=7</p>
 <del>We should use html and javascript instead of elm!</del>
-<p>t</p>
-
+<figure>
+    <img src="asset/test.jpg" width="300" height="210">
+    <figcaption>demo2</figcaption>
+</figure>
+<script src="scripts/main.js" defer></script>
 </body>
 </html>
