--- a/test1.html
+++ b/test1.html
@@ -31,5 +31,7 @@ content3
     <figcaption>demo2</figcaption>
 </figure>
 <script src="scripts/main.js" defer></script>
+<p>here's a test of iframe, with youtube</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/a5mVZL7xbWc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
