--- a/test1.html
+++ b/test1.html
@@ -33,5 +33,20 @@ content3
 <script src="scripts/main.js" defer></script>
 <p>here's a test of iframe, with youtube</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/a5mVZL7xbWc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p>here's a demo for table</p>
+<table>
+    <tr>
+        <th>first</th>
+        <td>a</td>
+        <td>b</td>
+        <td>c</td>
+    </tr>
+    <tr>
+        <th>second</th>
+        <td>2</td>
+        <td>4</td>
+        <td>5</td>
+    </tr>
+</table>
 </body>
 </html>
